# netsec_audit

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
examples/: vulnerable-router.cfg
rules/: cisco-ios.toml
src/: engine.rs  error.rs  lib.rs  main.rs  model.rs  report.rs  rules.rs
tests/: rules_file.rs
